# Skeditor

./: .gitignore  README.md
Experiments/Programs/: monolithic.kyp  s13_hardshoulder.kyx  s14_latdynamics.kyx  s1_keep_dist-dynamics.kyx  s1_keep_dist.kyx  s1_keepdistance.kyx  s6_control_longitudinal  s6_longdynamics.kyx
Plugins/de.tubs.skeditor/: .classpath  .project  build.gradle  build.properties  plugin.properties  plugin.xml
Plugins/de.tubs.skeditor.examples/: .project  plugin.xml  projects.xml
Plugins/de.tubs.skeditor.examples/skeditor_examples/BasicDrivingManeuvers/: .project  index.filelist  projectInformation.xml
Plugins/de.tubs.skeditor.examples/skeditor_examples/BasicDrivingManeuvers/resources/: Bajcsky-Nagel-1994-and-1996.xlsx
Plugins/de.tubs.skeditor.examples/skeditor_examples/CaseStudyStrongCompositionality/: .project  index.filelist  projectInformation.xml
Plugins/de.tubs.skeditor.examples/skeditor_examples/FollowMode/: .project  index.filelist  projectInformation.xml
Plugins/de.tubs.skeditor.examples/skeditor_examples/FollowMode-CaseStudy2021/: .project  index.filelist  projectInformation.xml
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl/: .project  plugin.properties  plugin.xml
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl.ide/: .project
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl.tests/: .project
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl.ui/: .classpath  .project  plugin.xml
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl.ui.tests/: .classpath  .project
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl/.launch/: Generate Sdl (sd) Language Infrastructure.launch  Launch Runtime Eclipse.launch
Plugins/de.tubs.skeditor.sdl/de.tubs.skeditor.sdl/text/: description.txt
Plugins/de.tubs.skeditor.simulation.airsim/: .project  plugin.xml
Plugins/de.tubs.skeditor.simulation.airsim/resources/: CMakeLists.txt  Skill.h  settings.json
Plugins/de.tubs.skeditor.simulation.launcher/: .project  plugin.xml
Plugins/de.tubs.skeditor.simulation.ros/: .project  plugin.xml
Plugins/de.tubs.skeditor.simulation.ros/resources/: keymaerax_parsing_test.kyx  simple_proof.kyx
Plugins/de.tubs.skeditor.simulation.ros/resources/project_gazebo/worlds/: world.world
Plugins/de.tubs.skeditor.simulation.ros/resources/project_template/: CMakeLists.txt  package.xml
Plugins/de.tubs.skeditor/libs/: readme.txt
Plugins/de.tubs.skeditor/model/: SkillGraph.aird  SkillGraph.ecore  SkillGraph.genmodel
Plugins/de.tubs.skeditor/resources/: SimpleThermostat.sked  keymaerax_parsing_test.kyx
Plugins/de.tubs.skeditor/resources/cpsmodel/: schema.xsd
Plugins/de.tubs.skeditor/resources/project_gazebo/: package.xml
Plugins/de.tubs.skeditor/resources/project_template/: CMakeLists.txt  package.xml
Plugins/de.tubs.skeditor/resources/project_template/src/: Skill.h  main.cpp
Plugins/de.tubs.skeditor/text/: description.txt
(+313 files in other folders)
